[package]
name = "rs_ib_api"
version = "0.1.0"
authors = ["rolandgg <roland.g.grein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.1.1", features = ["full"] }
num-traits = "0.2"
num-derive = "0.2"
chrono = "0.4.19"
chrono-tz = "0.4"
enum-ordinalize = "3.1.8"
rust_decimal = "1.10.2"
crossbeam = "0.8.0"
enumset = "1.0.4"
bitvec = "0.21"